# dialect-classification-app

./: Dockerfile  README.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  server.py
backend/scripts/: clear_recordings.py  main.py  model_training.py  server.py
backend/tests/: test_clear_recordings.py  test_get_audio_properties.py  test_get_filename.py  test_upload.py
backend/utils/: clear_recordings.py  env.py  get_audio_properties.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/assets/: dialects.json
frontend/src/components/: AgreementCheckbox.tsx  DialectSelector.tsx  MicButton.tsx  PlayAudioButton.tsx  SpeakCard.tsx  SpeakForm.tsx
frontend/src/hooks/: useRecorder.ts
frontend/src/pages/: About.tsx  Guidelines.tsx  Home.tsx  Privacy.tsx  Speak.tsx  Terms.tsx
frontend/src/utils/: session.ts
