[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "joblib>=1.5.1",
    "librosa>=0.11.0",
    "pandas>=2.3.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
